--- a/server.js/views/login.ejs
+++ b/server.js/views/login.ejs
@@ -3,19 +3,19 @@
 <link rel="stylesheet" type="text/css" href="./stylesheets/login.css" />
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form action="/login" method="post">
 			<h1>Bem vindo, Encarregado de Educação!</h1>
-			<input type="username" placeholder="Username" />
-			<input type="password" placeholder="Password" />
-			<button>Entrar</button>
+			<input type="username" name="username" placeholder="Username" />
+			<input type="password" name="password" placeholder="Password" />
+			<button type="submit">Entrar</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form action="/login" method="post">
 			<h1>Bem vindo Docente!</h1>
-			<input type="username" placeholder="Username" />
-			<input type="password" placeholder="Password" />
-			<button>Entrar</button>
+			<input type="username" name="username" placeholder="Username" />
+			<input type="password" name="password" placeholder="Password" />
+			<button type="submit">Entrar</button>
 		</form>
 	</div>
 	<div class="overlay-container">
@@ -34,4 +34,4 @@
 	</div>
 </div>
 
-<script src="./javascripts/auth.js"></script>
+<script defer src="./javascripts/auth.js"></script>
