--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="./stylesheets/login.css" />
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="/login" method="post">
+		<form action="/loginEE" method="post">
 			<h1>Bem vindo, Encarregado de Educação!</h1>
 			<input type="username" name="username" placeholder="Username" />
 			<input type="password" name="password" placeholder="Password" />
@@ -11,7 +11,7 @@
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="/login" method="post">
+		<form action="/loginD" method="post">
 			<h1>Bem vindo Docente!</h1>
 			<input type="username" name="username" placeholder="Username" />
 			<input type="password" name="password" placeholder="Password" />
