--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -1,5 +1,11 @@
 <%- include('./layout.ejs') %>
-<h1>authenticated D moment</h1>
+
+<nav>
+
+
+</nav>
+<h1>authenticated oment</h1>
 <form action="/logout" method="post">
-    <button type="submit">LOGOUT</button>
+    <button style=" width:30px; height:30px; margin-right:5px ;" type="submit">LOGOUT</button>
 </form>
+
