--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -1,17 +1,27 @@
-
-
 <link rel="stylesheet" type="text/css" href="http://localhost:3000/stylesheets/homepage.css" />
 
 <div class="logoutnbtn">
-<form  action="/logout" method="post">
-    <button  class="btnlog" type="submit">
-      <img  class="iconbtn" src="http://localhost:3000/assets/account.png" />
-    </button>
-    
-</form>
+    <form action="/logout" method="post">
+        <button class="btnlog" type="submit">
+            <img class="iconbtn" src="http://localhost:3000/assets/account.png" />
+        </button>
+    </form>
 </div>
 
-
-  <row class="rowclasses">
-    <div class="classblock">A</div>
-  </row>
+<div class="rowclasses">
+    <div class="classblock">
+        <h1 class="classborder">
+            6º1
+        </h1>
+    </div>
+    <div class="classblock">
+        <h1 class="classborder">
+            6º2
+        </h1>
+    </div>
+    <div class="classblock">
+        <h1 class="classborder">
+            6º3
+        </h1>
+    </div>
+</div>
