fixed bug on passport checking, edited db

--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -1,26 +1,26 @@
-<link rel="stylesheet" type="text/css" href="http://localhost:3000/stylesheets/homepage.css" />
+<link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css"/>
 
 <div class="logoutnbtn">
     <form action="/logout" method="post">
         <button class="btnlog" type="submit">
-            <img class="iconbtn" src="http://localhost:3000/assets/account.png" />
+            <img class="iconbtn" src="/assets/account.png" />
         </button>
     </form>
 </div>
 
 <div class="rowclasses">
     <div class="classblock">
-        <h1 class="classborder">
+        <h1 class="classborder" onclick="window.location='/homepage/D/alunos'">
             6º1
         </h1>
     </div>
     <div class="classblock">
-        <h1 class="classborder">
+        <h1 class="classborder" onclick="window.location='/homepage/D/alunos'">
             6º2
         </h1>
     </div>
     <div class="classblock">
-        <h1 class="classborder">
+        <h1 class="classborder" onclick="window.location='/homepage/D/alunos'">
             6º3
         </h1>
     </div>
