--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,5 +2,5 @@
 <html lang="en" dir="ltr">
   <head>
     <title>PeVV</title>
-    <link rel="stylesheet" href="http://localhost:3000/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
