--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
+<script defer src="/javascripts/auth.js"></script>
 <%- include('./layout.ejs') %>
-	<link rel="stylesheet" type="text/css" href="./stylesheets/login.css" />
+	<link rel="stylesheet" type="text/css" href="/stylesheets/login.css" />
 	<div class="container" id="container">
 		<div class="form-container sign-up-container">
 			<form action="/loginEE" method="post">
@@ -32,5 +33,3 @@
 			</div>
 		</div>
 	</div>
-
-	<script defer src="./javascripts/auth.js"></script>
