--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -9,8 +9,8 @@
 </div>
 
 <div class="rowclasses">
-    <div class="classblock">
-        <h1 class="classborder" onclick="window.location='/homepage/D/alunos'">
+    <div class="classblock" onclick="window.location='/homepage/D/alunos'">
+        <h1 class="classborder" >
             6º1
         </h1>
     </div>
