--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -1,7 +1,14 @@
-<script defer src="/javascripts/retrieveAlunos.js"></script>
+
 <link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css"/>
 
-<h1>Made in Ohio.</h1>
-<a href="https://www.youtube.com/watch?v=d7r9899NtUk">national anthem</a>
+<h1>Lista de Alunos</h1>
 
-<button id="getalunos" onclick="buscaAlunosDaTurmaX('1')" >get alunos</button>
+
+<ul>
+    <% alunos.forEach(function (user) { %>
+        <li>  
+            <span><%= user.nome_aluno %> - <%= user.nome_ee %></h1>  </span>
+        
+        </li>                                   
+    <% }) %>
+  </ul>
