lista de alunos

--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -9,18 +9,18 @@
 </div>
 
 <div class="rowclasses">
-    <div class="classblock" onclick="window.location='/homepage/D/alunos'">
+    <div class="classblock" onclick="window.location='/homepage/D/alunos/1'">
         <h1 class="classborder" >
             6º1
         </h1>
     </div>
     <div class="classblock">
-        <h1 class="classborder" onclick="window.location='/homepage/D/alunos'">
+        <h1 class="classborder" onclick="window.location='/homepage/D/alunos/2'">
             6º2
         </h1>
     </div>
     <div class="classblock">
-        <h1 class="classborder" onclick="window.location='/homepage/D/alunos'">
+        <h1 class="classborder" onclick="window.location='/homepage/D/alunos/3'">
             6º3
         </h1>
     </div>
