--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -1,14 +1,25 @@
+<link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css"/>
 
-<h1>Lista de Alunos</h1>
-
+<div class="headerBar">
+    <img class="iconbtn" src="/assets/goBack.png" onclick="window.location='/homepage/D'" />
+    <p class="headerText">Lista de Alunos</p>
+</div>
 
 <ul>
     <% alunos.forEach(function (user) { %>
-        <li>  
-            <span><%= user.nome_aluno %> - <%= user.nome_ee %></h1>  </span>
-        
-        </li>                                   
-    <% }) %>
-  </ul>
+        <li>
+            <div class="spanUser">
+                <h1 class="textUser">
+                    <%= user.nome_aluno %> - <%= user.nome_ee %>
+                </h1>
+                <div class="btnUser">
+                    <button type="button" class="btn btn-primary" onclick="window.location='/homepage/D/<%= user.id %>'">Relatórios</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location='/homepage/D/<%= user.id %>'">Mensagens</button>
+                </div>
+            </div>
+        </li>
+        <% }) %>
+</ul>
