--- a/views/homepageEE.ejs
+++ b/views/homepageEE.ejs
@@ -1,5 +1,18 @@
-<%- include('./layout.ejs') %>
-<h1>authenticated EE moment</h1>
-<form action="/logout" method="post">
-    <button type="submit">LOGOUT</button>
-</form>
+<link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css"/>
+
+<div class="logoutnbtn">
+    <form action="/logout" method="post">
+        <button class="btnlog" type="submit">
+            <img class="iconbtn" src="/assets/account.png" />
+        </button>
+    </form>
+</div>
+
+<div class="rowclasses">
+    
+    <div class="classblock" onclick="window.location='/homepage/D/alunos'">
+        <h1 class="classborder" >
+           A
+        </h1>
+    </div>
+</div>
