--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -8,19 +8,21 @@
     </form>
 </div>
 
+<h1>Selecione a turma.</h1>
+
 <div class="rowclasses">
-    <div class="classblock" onclick="window.location='/homepage/D/alunos/1'">
+    <div class="classblock" onclick="window.location='/homepage/D/1/alunos'">
         <h1 class="classborder" >
             6º1
         </h1>
     </div>
-    <div class="classblock">
-        <h1 class="classborder" onclick="window.location='/homepage/D/alunos/2'">
+    <div class="classblock" onclick="window.location='/homepage/D/2/alunos'">
+        <h1 class="classborder">
             6º2
         </h1>
     </div>
-    <div class="classblock">
-        <h1 class="classborder" onclick="window.location='/homepage/D/alunos/3'">
+    <div class="classblock" onclick="window.location='/homepage/D/3/alunos'">
+        <h1 class="classborder">
             6º3
         </h1>
     </div>
