--- a/public/stylesheets/alunos.css
+++ b/public/stylesheets/alunos.css
@@ -7,6 +7,23 @@
     
 }
 
+.logoutbtn {
+    margin-left: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.btnlog {
+    width: 50px;
+    height: 50px;
+    margin-left: 90%;
+    padding: 0;
+    border: none;
+    background: rgb(235, 192, 217);
+    border-radius: 20%;
+}
+
 .headerBar{
     display: flex;
     flex-direction: row;
