--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -8,6 +8,14 @@
     <p class="headerText">Lista de Alunos</p>
 </div>
 
+<div class="logoutnbtn">
+    <form action="/logout" method="post">
+        <button class="btnlog" type="submit">
+            <img class="iconbtn" src="/assets/account.png" />
+        </button>
+    </form>
+</div>
+
 <ul>
     <% alunos.forEach(function (user) { %>
         <li>
@@ -16,8 +24,8 @@
                     <%= user.nome_aluno %> - <%= user.nome_ee %>
                 </h1>
                 <div class="btnUser">
-                    <button type="button" class="btn btn-primary" onclick="window.location='/homepage/D/<%= user.id %>'">Relatórios</button>
-                    <button type="button" class="btn btn-primary" onclick="window.location='/homepage/D/<%= user.id %>'">Mensagens</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location='/homepage/D/<%= turma %>/<%= user.id %>/relatorios'">Relatórios</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location='/homepage/D/<%= turma %>/<%= user.id %>/mensagens'">Mensagens</button>
                 </div>
             </div>
         </li>
