--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css"/>
 
-<div class="logoutnbtn">
+<div>
     <form action="/logout" method="post">
         <button class="btnlog" type="submit">
             <img class="iconbtn" src="/assets/account.png" />
