--- a/views/relatorios.ejs
+++ b/views/relatorios.ejs
@@ -1,23 +1,28 @@
+<link rel="stylesheet" type="text/css" href="/stylesheets/alunos.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/relatorios.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+
 <div class="headerBar">
-    <img class="iconbtn" src="/assets/goBack.png" onclick="history.back()" /> <!--UHHH isto devia dar redirect para turma ou para escolha de turmas?-->
+    <div class="headerLeft">
+        <img class="backIcon" src="/assets/goBack.png" onclick="window.location='/homepage/D/1/alunos'" />
+        <p class="headerText">Lista de Relatórios do aluno(a) <%= aluno %>
+        </p>
+    </div>
+    <div>
+        <form action="/logout" method="post">
+            <button class="btnlog" type="submit">
+                <img class="iconbtn" src="/assets/account.png" />
+            </button>
+        </form>
+    </div>
 </div>
 
-<div class="logoutnbtn">
-    <form action="/logout" method="post">
-        <button class="btnlog" type="submit">
-            <img class="iconbtn" src="/assets/account.png" />
-        </button>
-    </form>
-</div>
-
-<p class="headerText">Lista de Relatórios acerca de <%= aluno %></p>
 
 <div class="newRelatorio">
-    <button type="button" class="btn btn-primary" onclick="window.location=window.location.href+'/new'">Criar novo relatório</button>
+    <button type="button" class="btn btn-primary" onclick="window.location=window.location.href+'/new'">Criar novo
+        relatório</button>
 </div>
 
 <ul>
@@ -28,9 +33,11 @@
                     <%= rel.data %>
                 </h1>
                 <div class="relContent">
-                    <p><%= rel.comportamento %> - <%= rel.assiduidade %></p>
+                    <p>
+                        <%= rel.comportamento %> - <%= rel.assiduidade %>
+                    </p>
                 </div>
             </div>
         </li>
-    <% }) %>
+        <% }) %>
 </ul>
