--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -1,31 +1,15 @@
+
+
 .urgentetrue {
-    background-color: coral;
+    background-color: rgb(237, 84, 33);
 }
 
-.iconbtn {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    margin-left: 10px;
-    margin-top: 1%;
+.newRelatorio{
+    margin: 0 auto;
+    width: fit-content;
+    margin-top: 15px;
 }
 
-.logoutbtn {
-    margin-left: 50%;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-}
-
-.btnlog {
-    width: 50px;
-    height: 50px;
-    margin-left: 90%;
-    padding: 0;
-    border: none;
-    background: rgb(235, 192, 217);
-    border-radius: 20%;
-}
 
 .btnSubmit {
     width: 50px;
@@ -51,3 +35,15 @@
     border: none;
 }
 
+
+/*form relatorio*/
+
+.ContainerRelatorio{
+    margin: 0 auto;
+    width: fit-content;
+    background-color: pink;
+}
+
+.formText{
+    font-size: 28px;
+}
