--- a/views/homepageD.ejs
+++ b/views/homepageD.ejs
@@ -3,7 +3,7 @@
 <div>
     <form action="/logout" method="post">
         <button class="btnlog" type="submit">
-            <img class="iconbtn" src="/assets/account.png" />
+            <img class="iconbtn" src="/assets/logout.png" />
         </button>
     </form>
 </div>
