--- a/views/new_relatorio.ejs
+++ b/views/new_relatorio.ejs
@@ -11,7 +11,7 @@
         <div>
             <form action="/logout" method="post">
                 <button class="btnlog" type="submit">
-                    <img class="iconbtn" src="/assets/account.png" />
+                    <img class="iconbtn" src="/assets/logout.png" />
                 </button>
             </form>
         </div>
