--- a/views/new_relatorio.ejs
+++ b/views/new_relatorio.ejs
@@ -3,64 +3,90 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <div class="headerBar">
-        <div class="headerLeft">
-            <img class="backIcon" src="/assets/goBack.png" onclick="window.location='/homepage/D/1/alunos'" />
-            </p>
-        </div>
-        <div>
-            <form action="/logout" method="post">
-                <button class="btnlog" type="submit">
-                    <img class="iconbtn" src="/assets/logout.png" />
-                </button>
-            </form>
-        </div>
+<div class="headerBar">
+    <div class="headerLeft">
+        <img class="backIcon" src="/assets/goBack.png" onclick="window.location='/homepage/D/1/alunos'" />
+        </p>
     </div>
+    <div>
+        <form action="/logout" method="post">
+            <button class="btnlog" type="submit">
+                <img class="iconbtn" src="/assets/logout.png" />
+            </button>
+        </form>
+    </div>
+</div>
 
 
 <div class="ContainerRelatorio">
-<form action="/submitRelatorio">
+    <form action="/submitRelatorio">
+        <div>
+            <p class="formText">Comportamento</p>
 
-    <p class="formText">Comportamento</p>
+            <div class="slidecontainer">
+                <input type="range" value="50" min="1" max="100" id="slideComportamento"
+                    oninput="this.nextElementSibling.value = this.value" class="slider">
+                <output>50</output>
+            </div>
+            <label for="DComportamento" id="titleComportamento">Informação geral</label>
+            <input id="DComportamento" name="DComportamento" class="form-control input-sm"></input> </br>
+            <p><label for="DComportamento">Detalhes do comportamento</label></p>
+            <textarea id="DComportamento" name="DComportamento" rows="4" cols="50"></textarea>
+        </div>
 
-    <div class="slidecontainer">
-        <input type="range" value="50" min="1" max="100" id="slideComportamento" oninput="this.nextElementSibling.value = this.value">
-        <output>50</output>
+        <br>
+        <br>
+
+        <div>
+            <p class="formText">Assiduidade</p>
+
+            <div class="slidecontainer">
+                <input type="range" value="50" min="1" max="100" id="slideAssiduidade"
+                    oninput="this.nextElementSibling.value = this.value" class="slider">
+                <output>50</output>
+            </div>
+            <label for="DAssiduidade" id="titleAssiduidade">Informação geral</label>
+            <input id="DAssiduidade" name="DAssiduidade" class="form-control input-sm"></input> </br>
+            <p><label for="DAssiduidade">Detalhes da assiduidade</label></p>
+            <textarea id="DAssiduidade" name="DAssiduidade" rows="4" cols="50"></textarea>
+        </div>
+        <br>
+
+        <div>
+            <p class="formText">Bem-Estar</p>
+
+            <div class="slidecontainer">
+                <input type="range" value="50" min="1" max="100" id="slideBemEstar"
+                    oninput="this.nextElementSibling.value = this.value" class="slider">
+                <output>50</output>
+            </div>
+            <label for="DBemEstar" id="titleBemEstar">Informação geral</label>
+            <input id="DBemEstar" name="DBemEstar" class="form-control input-sm"></input> </br>
+            <p><label for="DComportamento">Detalhes do bem-estar</label></p>
+            <textarea id="DBemEstar" name="DBemEstar" rows="4" cols="50"></textarea>
+        </div>
+        <br>
+        <br>
+
+        <p class="formText">Faltas de Material</p>
+
+        <div class="slidecontainer">
+            <input type="range" value="50" min="1" max="100" id="slideFaltas"
+                oninput="this.nextElementSibling.value = this.value" class="slider">
+            <output>50</output>
+        </div>
+        <label for="DFaltas" id="titleFFaltas">Informação geral</label>
+        <input id="DFaltas" name="DFaltas" class="form-control input-sm"></input> </br>
+        <p><label for="DFaltas">Detalhes das faltas de material</label></p>
+        <textarea id="DFaltas" name="DFaltas" rows="4" cols="50"></textarea>
     </div>
 
-    <p><label for="DComportamento">Descrição do comportamento</label></p>
-    <textarea id="DComportamento" name="DComportamento" rows="4" cols="50"></textarea>
-    <br>
+        <div class="submitRelatorio">
+            <button class="btnSubmit" type="submit"> Enviar </button>
+            <button class="btnSave" type="submit"> Save </button>
+            <input class='btnUrgent' type="checkbox" id="urgente" name="urgente" value="true">
+            <label for="urgente"> É Urgente</label><br>
+        </div>
 
-    <p class="formText" >Assiduidade</p>
-
-    <div class="slidecontainer">
-        <input type="range" value="50" min="1" max="100" id="slideAssiduidade" oninput="this.nextElementSibling.value = this.value">
-        <output>50</output>
-    </div>
-
-    <p><label for="DAssiduidade">Descrição da assiduidade</label></p>
-    <textarea id="DAssiduidade" name="DAssiduidade" rows="4" cols="50"></textarea>
-    <br>
-
-    <p class="formText" >Bem-estar</p>
-
-    <div class="slidecontainer">
-        <input type="range" value="50" min="1" max="100" id="slideBemEstar" oninput="this.nextElementSibling.value = this.value">
-        <output>50</output>
-    </div>
-
-    <p><label for="DBemEstar">Descrição do bem-estar</label></p>
-    <textarea id="DBemEstar" name="DBemEstar" rows="4" cols="50"></textarea>
-    <br>
-    
-
-    <div class="submitRelatorio">
-        <button class="btnSubmit" type="submit"> Enviar </button>
-        <button class="btnSave" type="submit"> Save </button>
-        <input class='btnUrgent' type="checkbox" id="urgente" name="urgente" value="true">
-        <label for="urgente"> É Urgente</label><br>
-    </div>
-    
-</form>
+    </form>
 </div>
