--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,4 +3,5 @@
   <head>
     <title>PeVV</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script type="text/javascript" src="/jquery/jquery-3.6.0.min.js"></script>
   </head>
