--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -13,7 +13,6 @@
 .btnSubmit {
     width: 50px;
     height: 50px;
-    margin-left: 95%;
     padding: 0;
     border: none;
 }
@@ -21,13 +20,32 @@
 .btnSave {
     width: 50px;
     height: 50px;
-    margin-left: 85%;
     padding: 0;
     border: none;
 }
 
+.submitRelatorio{
+  
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+    margin-left: 50%;
+
+}
+
+.urgentContainer{
+    display: flex;
+    flex-direction: row;
+   
+}
+
+.urgentMessage{
+    color: red;
+    font-size: 15px;
+}
+
 .btnUrgent {
-    width: 50px;
+    width: 20px;
     height: 50px;
     margin-left: 10%;
     padding: 0;
