--- a/views/new_relatorio.ejs
+++ b/views/new_relatorio.ejs
@@ -32,9 +32,8 @@
         </div>
         <label for="DComportamento" id="titleComportamento">Informação geral</label>
         <input id="DComportamento" name="DComportamento" class="form-control input-sm"></input> </br>
-        <p><label for="DComportamento">Detalhes do comportamento</label></p>
+        <p><label for="DComportamento" id="detalhesComportamento">Detalhes do comportamento</label></p>
         <textarea id="DComportamento" name="DComportamento" rows="4" cols="50"></textarea>
-
 
         <br>
         <br>
