--- a/views/relatorioDetails.ejs
+++ b/views/relatorioDetails.ejs
@@ -17,65 +17,73 @@
         </form>
     </div>
 </div>
-<div class="ContainerShowRelatorio">
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Comportamento</p>
+<div class="ContainerShowRelatorio ">
+    <div class="col-md-3">
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Comportamento</p>
 
-        <p> Perceção Geral: <%= relatorio.comportamento_valor %></p>
-        <p> Informação Geral: <%= relatorio.comportamento %></p>
-        <p> Detalhes: <%= relatorio.comportamento_detalhes %></p>
+            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
+            </p>
+            <p> Informação Geral: <%= relatorio.comportamento %>
+            </p>
+            <p> Detalhes: <%= relatorio.comportamento_detalhes %>
+            </p>
 
-    </div>
+        </div>
 
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Assiduidade</p>
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Assiduidade</p>
 
-        <p> Perceção Geral: <%= relatorio.assiduidade_valor %></p>
-        <p> Perceção Geral: <%= relatorio.assiduidade %></p>
-        <p> Perceção Geral: <%= relatorio.assiduidade_detalhes %></p>
+            <p> Perceção Geral: <%= relatorio.assiduidade_valor %>
+            </p>
+            <p> Perceção Geral: <%= relatorio.assiduidade %>
+            </p>
+            <p> Perceção Geral: <%= relatorio.assiduidade_detalhes %>
+            </p>
 
-    </div>
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Bem-Estar</p>
+        </div>
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Bem-Estar</p>
 
-        <p> Perceção Geral: <%= relatorio.bem_estar_valor %>
-        </p>
+            <p> Perceção Geral: <%= relatorio.bem_estar_valor %>
+            </p>
 
-    </div>
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Faltas de Material</p>
+        </div>
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Faltas de Material</p>
 
-        <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-        </p>
+            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
+            </p>
 
-    </div>
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Avaliações</p>
+        </div>
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Avaliações</p>
 
-        <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-        </p>
+            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
+            </p>
 
-    </div>
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Visitas de Estudo</p>
+        </div>
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Visitas de Estudo</p>
 
-        <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-        </p>
+            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
+            </p>
 
-    </div>
-    <div class="ContainerRelatorio">
-        <!-- <form action="/submitRelatorio"> -->
-        <p class="formText">Reuniões</p>
+        </div>
+        <div class="ContainerRelatorio">
+            <!-- <form action="/submitRelatorio"> -->
+            <p class="formText">Reuniões</p>
 
-        <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-        </p>
+            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
+            </p>
 
+        </div>
     </div>
 </div>
 <br>
