--- a/public/stylesheets/relatorios.css
+++ b/public/stylesheets/relatorios.css
@@ -1,17 +1,39 @@
 
-.spanRelatorio{
-    background-color: #5078de;
+.btnNewR{
+    border-radius: 10px;
+	border: 1px solid #0d2c92;
+	background-color: #f6f5f7;
+	color: #0d2c92;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 9px 20px;
 }
 
+.listRelatorios{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
 
 .data{
-    font-size: 22px;
+    font-size: 18px;
     padding:0;
     background-color: transparent;
     border: none;
 }
+
+
 .urgentetrue {
-    background-color: rgb(251, 248, 247);
+    background-color: rgb(248, 142, 106);
+}
+
+.urgentText{
+    font-size: 15px;
+}
+
+.containerUrgent{
+    
 }
 
 .newRelatorio {
@@ -39,9 +61,11 @@
 .submitRelatorio{
   
     display: flex;
+    flex-direction: row;
+    margin: 0 auto;
     justify-content: space-between;
     margin-top: 25px;
-    margin-left: 50%;
+    
 
 }
 
@@ -69,13 +93,13 @@
 
 .ContainerRelatorio {
     margin: 0 auto;
-    background-color: rgb(215, 211, 240);
+    background: linear-gradient( #84c2f5, #b0c7f5);
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
     margin-bottom: 20px;
-    width: 100%;
+    width: 90%;
 
 }
 
@@ -85,7 +109,7 @@
 
 .historyText{
     font-size: 24px;
-    margin-left: 70px;
+   color: #0d2c92;
 }
 
 
@@ -137,3 +161,5 @@
     width: 100%;
     margin: 0 auto;
   }
+
+  
