--- a/views/relatorioDetails.ejs
+++ b/views/relatorioDetails.ejs
@@ -18,73 +18,93 @@
     </div>
 </div>
 <div class="ContainerShowRelatorio ">
-    <div class="col-md-3">
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Comportamento</p>
 
-            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-            </p>
-            <p> Informação Geral: <%= relatorio.comportamento %>
-            </p>
-            <p> Detalhes: <%= relatorio.comportamento_detalhes %>
-            </p>
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Comportamento</p>
 
-        </div>
+        <p> Perceção Geral: <%= relatorio.comportamento_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.comportamento %>
+        </p>
+        <p> Detalhes: <%= relatorio.comportamento_detalhes %>
+        </p>
 
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Assiduidade</p>
-
-            <p> Perceção Geral: <%= relatorio.assiduidade_valor %>
-            </p>
-            <p> Perceção Geral: <%= relatorio.assiduidade %>
-            </p>
-            <p> Perceção Geral: <%= relatorio.assiduidade_detalhes %>
-            </p>
-
-        </div>
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Bem-Estar</p>
-
-            <p> Perceção Geral: <%= relatorio.bem_estar_valor %>
-            </p>
-
-        </div>
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Faltas de Material</p>
-
-            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-            </p>
-
-        </div>
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Avaliações</p>
-
-            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-            </p>
-
-        </div>
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Visitas de Estudo</p>
-
-            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-            </p>
-
-        </div>
-        <div class="ContainerRelatorio">
-            <!-- <form action="/submitRelatorio"> -->
-            <p class="formText">Reuniões</p>
-
-            <p> Perceção Geral: <%= relatorio.comportamento_valor %>
-            </p>
-
-        </div>
     </div>
+
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Assiduidade</p>
+
+        <p> Perceção Geral: <%= relatorio.assiduidade_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.assiduidade %>
+        </p>
+        <p> Detalhes: <%= relatorio.assiduidade_detalhes %>
+        </p>
+
+    </div>
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Pontualidade</p>
+
+        <p> Perceção Geral: <%= relatorio.pontualidade_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.pontualidade %>
+        </p>
+        <p> Detalhes: <%= relatorio.pontualidade_detalhes %>
+        </p>
+
+    </div>
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Bem-Estar</p>
+
+        <p> Perceção Geral: <%= relatorio.bem_estar_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.bem_estar %>
+        </p>
+        <p> Detalhes: <%= relatorio.bem_estar_detalhes %>
+        </p>
+
+    </div>
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Faltas de Material</p>
+
+        <p> Perceção Geral: <%= relatorio.faltas_material_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.faltas_material %>
+        </p>
+        <p> Detalhes: <%= relatorio.faltas_material_detalhes %>
+        </p>
+
+    </div>
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Avaliações</p>
+
+        <p> Perceção Geral: <%= relatorio.avaliacao_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.avaliacao %>
+        </p>
+        <p> Detalhes: <%= relatorio.avaliacao_detalhes %>
+        </p>
+
+    </div>
+    <div class="ContainerRelatorio">
+        <!-- <form action="/submitRelatorio"> -->
+        <p class="formText">Visitas de Estudo</p>
+
+        <p> Perceção Geral: <%= relatorio.visitas_estudo_valor %>
+        </p>
+        <p> Informação Geral: <%= relatorio.visitas_estudo %>
+        </p>
+        <p> Detalhes: <%= relatorio.visitas_estudo_detalhes %>
+        </p>
+
+    </div>
+</div>
 </div>
 <br>
 <br>
